[tool.poetry]
name = "openglass"
version = "0.2.0"
description = "Openglass is a tool to query various social network and search for different type of information. Openglass is in its first versions still. Please expect bugs. If you want to contribute please do get in touch."
authors = ["Hiro <hiro@torproject.org>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.9.0"
Telethon = "^1.17.5"
six = "^1.15.0"
Sphinx = "^3.4.3"
recommonmark = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
openglass = 'openglass:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
